--- a/frontend/app/modules/products/ts/components/Templates/product-edit-component.html
+++ b/frontend/app/modules/products/ts/components/Templates/product-edit-component.html
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div>
-        <h1>Create Product</h1>
-        <form (ngSubmit)="onSubmit(model)" #productForm="ngForm">
+        <h1>Edit Product</h1>
+        <form (ngSubmit)="onSubmit(model)" #productEdit="ngForm">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" required [(ngModel)]="model.name" ngControl="name"  #name="ngForm" >
@@ -11,6 +11,6 @@
                     Name is required
                 </div>
             </div>  
-            <button type="submit" class="btn btn-default" [disabled]="!productForm.form.valid">Submit</button>
+            <button type="submit" class="btn btn-default" [disabled]="!productEdit.form.valid">Submit</button>
         </form>
     </div>
